--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="theme-color" content="#ffffff" />
+
+    <link rel="icon" href="/src/assets/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/src/assets/logo-ios.png" type="image/png" />
     <meta
       name="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0"
