--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="icon" href="/src/assets/logo.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/src/assets/logo-ios.png" type="image/png" />
+    <link
+      rel="apple-touch-icon"
+      href="/src/assets/logo-ios.png"
+      type="image/png"
+    />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0"
+    />
     <meta
       name="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0"
